--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "axios": "^0.25.0",
     "cors": "^2.8.5",
     "feather-icons-react": "^0.5.0",
-    "firebase": "^9.6.5",
+    "firebase": "9.8.2",
     "framer-motion": "^6.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
